objects/LegacyMasterReport__c.object
<CustomObject>
    <fields>
        <fullName>amendmentQuoteCount__c</fullName>
        <formula>generationSucceededCount__c - renewalQuoteCount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amendment Quote Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>contractCount__c</fullName>
        <label>Contracts Attempted Count</label>
        <summaryForeignKey>LegacyContractReport__c.masterReport__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>generationFailedCount__c</fullName>
        <label>Quote Generation Failed Count</label>
        <summaryFilterItems>
            <field>LegacyContractReport__c.generationFailure__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LegacyContractReport__c.masterReport__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>generationSucceededCount__c</fullName>
        <label>Quote Generation Succeeded Count</label>
        <summaryFilterItems>
            <field>LegacyContractReport__c.generationFailure__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LegacyContractReport__c.masterReport__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>isMainMaster__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Main Master Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>passPercentage__c</fullName>
        <formula>quoteSucceededCount__c / (quoteSucceededCount__c + quoteFailedCount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pass Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>passRate__c</fullName>
        <formula>(totalSuccesses__c) / (totalSuccesses__c + totalFailures__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>quoteFailedCount__c</fullName>
        <label>Quote had Mismatch(es) Count</label>
        <summaryFilterItems>
            <field>LegacyContractReport__c.failures__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>LegacyContractReport__c.masterReport__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>quoteSucceededCount__c</fullName>
        <label>Quote was Perfect Match Count</label>
        <summaryFilterItems>
            <field>LegacyContractReport__c.failures__c</field>
            <operation>equals</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LegacyContractReport__c.generationFailure__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LegacyContractReport__c.masterReport__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>renewalQuoteCount__c</fullName>
        <label>Renewal Quote Count</label>
        <summaryFilterItems>
            <field>LegacyContractReport__c.quoteType__c</field>
            <operation>equals</operation>
            <value>Renewal</value>
        </summaryFilterItems>
        <summaryForeignKey>LegacyContractReport__c.masterReport__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>totalFailures__c</fullName>
        <label>Total Number of Mismatches</label>
        <summarizedField>LegacyContractReport__c.failures__c</summarizedField>
        <summaryForeignKey>LegacyContractReport__c.masterReport__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>totalSuccesses__c</fullName>
        <label>Total Number of Matches</label>
        <summarizedField>LegacyContractReport__c.successes__c</summarizedField>
        <summaryForeignKey>LegacyContractReport__c.masterReport__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>totalValidationNeededCount__c</fullName>
        <label>Term Renewal Pricing Mismatch Count</label>
        <summarizedField>LegacyContractReport__c.validationNeededCount__c</summarizedField>
        <summaryForeignKey>LegacyContractReport__c.masterReport__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Legacy Master Report</label>
    <nameField>
        <label>LegacyMasterReport Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legacy Master Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>isMainMaster__c</columns>
        <columns>passPercentage__c</columns>
        <columns>contractCount__c</columns>
        <columns>renewalQuoteCount__c</columns>
        <columns>amendmentQuoteCount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>